# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "semcode"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
home = "=0.5.11"
lancedb = { version = "0.21", default-features = false }
arrow = "55.2"
arrow-array = "55.2"
arrow-schema = "55.2"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.5"
indicatif = "0.18.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustyline = "17.0"
colored = "3.0"
futures = "0.3.31"
ndarray = "0.16"
regex = "1.11"
rayon = "1.10"
dirs = "5.0"
num_cpus = "1.16"
tree-sitter = "0.24"
tree-sitter-c = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
streaming-iterator = "0.1"
once_cell = "1.20"
crossbeam-channel = "0.5"
sha1 = "0.10"
blake3 = "1.8.2"
hex = "0.4"
dashmap = "6.1"
tempfile = "3.14"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tokio-tungstenite = "0.24"
anstream = "0.6"        # Auto TTY/NO_COLOR handling; print!/println! and Write adapters [web:17]
owo-colors = { version = "4", features = ["supports-colors"] }  # .red().bold(), optional detection helpers [web:27]
gix = { version = "0.73", features = ["blocking-network-client", "worktree-mutation", "blocking-http-transport-curl"] }
model2vec-rs = "0.1.4"
tower-lsp = "0.20"      # Language Server Protocol framework for LSP server
url = "2.5"             # URL parsing for file URIs in LSP
similar = { version = "2.7", features = ["text"] }  # Proper diff algorithm for commit diffs
shlex = "1.3"           # Shell-like parsing for quoted strings in CLI
reqwest = { version = "0.11", features = ["blocking", "gzip"] }  # HTTP client for manifest downloads
flate2 = "1.0"          # gzip compression/decompression
chrono = "0.4.41"
chrono-english = "0.1"  # Natural language date parsing

# Force older AWS versions compatible with Rust 1.86
aws-config = "=1.8.8"
aws-credential-types = "=1.2.8"
aws-runtime = "=1.5.12"
aws-sdk-dynamodb = "=1.96.0"
aws-sdk-sso = "=1.87.0"
aws-sdk-ssooidc = "=1.89.0"
aws-sdk-sts = "=1.89.0"
aws-sigv4 = "=1.3.5"
aws-smithy-async = "=1.2.6"
aws-smithy-http = "=0.62.5"
aws-smithy-http-client = "=1.1.4"
aws-smithy-json = "=0.61.7"
aws-smithy-observability = "=0.1.4"
aws-smithy-query = "=0.60.8"
aws-smithy-runtime = "=1.9.4"
aws-smithy-runtime-api = "=1.9.2"
aws-smithy-types = "=1.3.4"
aws-smithy-xml = "=0.60.12"
aws-types = "=1.3.9"

[[bin]]
name = "semcode-index"
path = "src/bin/index.rs"

[[bin]]
name = "semcode"
path = "src/bin/query.rs"

[[bin]]
name = "semcode-mcp"
path = "src/bin/semcode-mcp.rs"

[[bin]]
name = "semcode-lsp"
path = "src/bin/semcode-lsp.rs"

[profile.release]
debug = false
